Alterando DAOs | Removendo MyBatis | Alterando regex do ISBN do Livro | Implementando testes de integração em CarrinhoTest e ItemCarrinhoTest
- Troquei as interfaces DAO pelas implementações;
- Troquei os métodos de AutorDao e CategoriaDa que buscavam as entidades pelo ID por métodos que buscam pelos seus outros campos únicos para facilitar a busca no banco
- Removi a lib do MyBatis e o arquivo SQL que era carregado por ele
- Alterei as condições para que a checagem do formato do ISBN ocorra apenas uma vez, além de mais algumas correções nas classes de domínio